@@ -33,6 +33,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::Authority" => "1.006",
     "Dist::Zilla::Plugin::AutoPrereqs" => 0,
     "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+    "Dist::Zilla::Plugin::CPANFile" => 0,
     "Dist::Zilla::Plugin::ConfirmRelease" => 0,
     "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
     "Dist::Zilla::Plugin::Git::Check" => 0,
@@ -132,6 +133,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Authority" => "1.006",
   "Dist::Zilla::Plugin::AutoPrereqs" => 0,
   "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+  "Dist::Zilla::Plugin::CPANFile" => 0,
   "Dist::Zilla::Plugin::ConfirmRelease" => 0,
   "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
   "Dist::Zilla::Plugin::Git::Check" => 0,
