@@ -121,8 +121,8 @@ exclude_filename = CONTRIBUTING.pod
 exclude_filename = LICENSE
 exclude_filename = Makefile.PL
 exclude_filename = cpanfile
-exclude_match    = ^vendor/
-exclude_match    = ^local/
+exclude_match = ^vendor/
+exclude_match = ^local/
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
@@ -130,6 +130,8 @@ include_dotfiles = 1
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
 [MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
+
+[CPANFile / @Author::KENTNL/CPANFile]
 
 [Manifest / @Author::KENTNL/Manifest]
 
@@ -279,6 +281,7 @@ Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
+Dist::Zilla::Plugin::CPANFile = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
 Dist::Zilla::Plugin::Git::Check = 0
@@ -325,5 +328,3 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [CheckPrereqsIndexed]
 skips = Dist::Zilla::PluginBundle::Author::KENTNL
-
-[CPANFile]
