@@ -105,6 +105,7 @@ toolkit           = eumm
 toolkit_hardness  = soft
 bump_versions     = 1
 src_readme        = mkdn
+carton_mode       = 1
 Author::KENTNL::TravisCI.skip_perls = 5.8
 
 ;[Prereqs::SyncVersions]
