@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.025020
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::CPANFile
 
 2.025010 2015-11-15T02:28:17Z
 
